[package]
name = "fileshare_client"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
