[package]
name = "fileshare_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fileshare"
path = "src/main.rs"

[dependencies]
structopt = "0.3.21"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
failure = "0.1.8"
paris = { version = "1.5", features = ["macros"] }
indicatif = "0.17.8"
rpassword = "7.3.1"
urlencoding = "2.1.3"
gethostname = "0.5.0"
mime_guess = "2.0.5"
pathdiff = "0.2.1"
futures-util = "0.3.30"
percent-encoding-rfc3986 = "0.1.3"
rand = "0.9.0-alpha.2"
clap_complete = "4.5.24"
path-clean = "1.0.1"
async-stream = "0.3.5"
tokio-util = "0.7.11"